# Pokemon

./: .gitignore  CARD_FEATURE_EXTRACTION_IDEAS.md  CODEX_KAGGLE_CLOUD_EXECUTION_PROMPT.md  LICENSE  NEXT_GOAL_DYNAMIC_CARD_INSTANCE.md  PROJECT_FILE_MANIFEST.md  README.md  README_DYNAMIC_TEMPORAL_STATE_HANDOFF.md  README_KAGGLE_RUN.md  TRAINING_IDEAS.md  baseline_decks.md  codex_dynamic_temporal_state_from_static_baseline(1).md  decks.md  project-content-cleanup-after-docs.patch  pyproject.toml  state_feature_audit.md
competition_selfplay/: MECHANICAL_POLICY.md  README.md  __init__.py  build_mechanical_submission.py  cli.py  config.py  deck.py  features.py  league.py  mechanical_agent.py  model.py  phase.py  reward.py  rollout.py  run_mechanical_selfplay.py  semantic.py  train_selfplay.py  training.py  transactions.py
configs/: card_pretrain.yaml  card_pretrain_smoke.yaml  dynamic_card_fusion_smoke.json
data/: __init__.py  card_dataset.py  card_preprocessing.py  decision_schema.py  detail_replay_join.py  dynamic_card_dataset.py  game_memory.py  hidden_belief.py  legal_options.py  observation_parser.py  online_replay_importer.py  replay_dataset.py  replay_feature_audit.py  replay_training_features.py  state_schema.py  static_detail_catalog.py
data_from_submission/: ptcg-replay-data-miner.ipynb
decision_agent_v1/: README.md  __init__.py
decks/: baseline_decks.json  baseline_decks.md
docs/: ARCHITECTURE.md  EXPERIMENT_HISTORY.md  KAGGLE_WORKFLOW.md  STATIC_CARD_V3_IMPLEMENTATION_GUIDE.md  STATUS.md
experiments/: README.md
kaggle_extract/: kernel-metadata.json  (+1 more)
(+200 files in other folders)
