[project]
name = "pokemon-tcg-fixed-deck-selfplay"
version = "0.1.0"
description = "Fixed-deck self-play for the Pokemon TCG AI Battle Challenge"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "PyYAML>=6.0",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
kaggle = [
    "kaggle>=1.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
